' ============================================================================
' TUTORIAL
' 1) Cole este código em https://www.plantuml.com/plantuml/
' 2) Clique em "Refresh" para visualizar e exporte (PNG/SVG/PDF)
' ============================================================================

@startuml
!theme plain
skinparam packageStyle rect
skinparam classAttributeIconSize 0

' ===================== PACOTES =====================
package "com.meu_pacote" {
  class MainApp
}

package "com.meu_pacote.facade" {
  class HidrometroFachada <<Singleton>> {
    - MAX_INSTANCIAS : int = 5
    - instancias : ConcurrentHashMap<int, Instancia>
    - api : ControladorAPIMulti
    --
    - passoMs : long
    - imgOnGlobal : boolean
    - imgIntervaloSeg : int
    - imgDir : String
    - imgW : int
    - imgH : int
    - imgFormato : String
    --
    + getInstance() : HidrometroFachada
    + configSimuladorSHA(passoMs: long) : void
    + configSimuladorSHA(passoMs: long, gerarImagens: boolean, intervaloSeg: int, dir: String, w: int, h: int, formato: String) : void
    + criaSHA(id: int) : void
    + criaSHAComUI(id: int, stage: Stage) : void
    + finalizaSHA(id: int) : void
    + modificaVazaoSHA(id: int, vazaoLPS: double) : void
    + modificaVazaoSHA(id: int, vazaoLPS: double, pressaoBaseKpa: Double) : void
    + habilitaGeraçaoImagemSHA(id: int, habilitar: boolean) : void
    + status(id: int) : String
    + statusAll() : String
    + idsAtivos() : Set<Integer>
    + snapshotMapaHidrometros() : Map<Integer, Hidrometro>
  }

  class Instancia {
    - id : int
    - hidrometro : Hidrometro
    - stage : Stage
    - display : Display
    --
    - tickExec : ScheduledExecutorService
    - tickTask : ScheduledFuture<?>
    - imgExec : ScheduledExecutorService
    - imgTask : ScheduledFuture<?>
  }
}

package "com.meu_pacote.api" {
  class ControladorAPIMulti {
    - fachada : HidrometroFachada
    - app : Javalin
    - porta : int
    --
    + ControladorAPIMulti(fachada: HidrometroFachada, porta: int = 7070)
    + iniciar() : void
    + parar() : void
  }
}

package "com.meu_pacote.model" {
  class Hidrometro {
    - estadoAtual : EstadoHidrometro
    - observers : List<Display>
    - random : Random
    --
    - consumoTotalM3 : double
    - pressaoAtualKpa : double
    - pressaoBaseKpa : double
    - vazaoLPS : double
    --
    + Hidrometro()
    + setEstado(novo: EstadoHidrometro) : void
    + adicionarObserver(obs: Display) : void
    + notificarObservers() : void
    + simularPassagemDeTempo(deltaTime: double) : void
    + getDadosAtuais() : DadosHidrometro
    + getVazaoLPS() : double
    + getPressaoAtualKpa() : double
    + adicionarConsumo(volM3: double) : void
    + setVazaoLPS(vazao: double) : void
    + setPressaoBaseKpa(pressao: double) : void
  }

  class DadosHidrometro {
    - consumoTotalM3 : double
    - pressaoAtualKpa : double
    - estado : String
    --
    + DadosHidrometro(consumo: double, pressao: double, estado: String)
    + getConsumoTotalM3() : double
    + getPressaoAtualKpa() : double
    + getEstado() : String
  }
}

package "com.meu_pacote.state" {
  interface EstadoHidrometro {
    + medirFluxo(deltaTime: double) : void
  }

  class EstadoComAgua {
    - hidrometro : Hidrometro
    + EstadoComAgua(h: Hidrometro)
    + medirFluxo(deltaTime: double) : void
  }

  class EstadoSemAgua {
    - hidrometro : Hidrometro
    - random : Random
    - tempoSemAgua : double
    + EstadoSemAgua(h: Hidrometro)
    + medirFluxo(deltaTime: double) : void
  }

  class EstadoComAr {
    - hidrometro : Hidrometro
    - random : Random
    - tempoComAr : double
    + EstadoComAr(h: Hidrometro)
    + medirFluxo(deltaTime: double) : void
  }
}

package "com.meu_pacote.ui" {
  class Display {
    - stage : Stage
    - scene : Scene
    - baseImage : Image
    --
    + Display(stage: Stage)
    + update(dados: DadosHidrometro) : void
  }
}

package "com.meu_pacote.cli" {
  class ClienteCLI {
    - api : HidrometroFachada
    - in : Scanner
    - fxInitialized : boolean
    --
    + main(args: String[]) : void
    - run() : void
  }
}

' ===================== RELACIONAMENTOS =====================

' MainApp usa a Façade
MainApp --> HidrometroFachada : usa

' CLI usa a Façade
ClienteCLI --> HidrometroFachada : controla

' Façade compõe Instancias (1..N)
HidrometroFachada "1" o-- "*" Instancia

' Cada Instancia possui um Hidrometro (com UI opcional)
Instancia *-- Hidrometro
Instancia o-- Display
Instancia o-- Stage

' Façade mantém referência à API multi
HidrometroFachada o-- ControladorAPIMulti

' Modelo/Estado/Observer
Hidrometro ..> DadosHidrometro : produz
Hidrometro "1" o-- "*" Display : observers
Hidrometro *- EstadoHidrometro
EstadoHidrometro <|.. EstadoComAgua
EstadoHidrometro <|.. EstadoSemAgua
EstadoHidrometro <|.. EstadoComAr

' API lê dados do(s) Hidrometro(s) via Façade
ControladorAPIMulti ..> HidrometroFachada : consulta IDs/dados

' ===================== NOTAS =====================
note right of HidrometroFachada
Façade Singleton multi-instância:
- Até 5 hidrômetros (1..5)
- 1 thread por instância (ScheduledExecutor)
- Snapshots opcionais por instância (UI)
- API única: /api/list, /api/{id}/status, /api/{id}/data, /api/status
end note

note bottom of ClienteCLI
CLI cria/finaliza/modifica por ID,
headless ou com UI (abre Stage).
end note

@enduml